Clean up PortUpdateTranslator/PortTranslatorUtil
Use a simple return with null check and instanceof pattern to reduce
verbosity a bit.

Change-Id: I45bc37e7f252a3bbe9c5a916a1b7c690f7771041
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>